deployments/pathweb/workloads/home-network/wyoming-whisper/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faster-whisper
  namespace: home-network
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: faster-whisper
  template:
    metadata:
      labels:
        app.kubernetes.io/name: faster-whisper
    spec:
      runtimeClassName: gvisor
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        runAsNonRoot: true
        seccompProfile:
          type: "RuntimeDefault"
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: node-group
                operator: In
                values: [baldric]
            weight: 100
      containers:
      - name: faster-whisper
        image: rhasspy/wyoming-whisper
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          readOnlyRootFilesystem: true
        args:
        - --model
        - base-int8
        - --language
        - en
        - --data-dir
        - /data
        ports:
        - containerPort: 10300
          name: wyoming
        volumeMounts:
        - name: data
          mountPath: /data
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
      - name: data
        persistentVolumeClaim:
          claimName: faster-whisper-data
